ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/EU_Price_Agreement__c.object-meta.xml
<CustomObject>
    <label>Price Header</label>
    <nameField>
        <displayFormat>PA-{YY}-{0000000}</displayFormat>
        <label>Price Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>