ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/Buying_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group_ID__c</fullName>
    <label>Buying Group ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>