ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Adjustment_Detail__c.field-meta.xml
<CustomField>
    <fullName>EU_Adjustment_Detail__c</fullName>
    <label>Adjustment Detail</label>
    <type>TextArea</type>
</CustomField>