ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Base_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Base_Price_ID__c</fullName>
    <label>Base Price ID</label>
    <type>TextArea</type>
</CustomField>