ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>EU_Buying_Group__c</fullName>
    <label>Buying Group</label>
    <type>TextArea</type>
</CustomField>