ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Category_Code_4__c.field-meta.xml
<CustomField>
    <fullName>EU_Category_Code_4__c</fullName>
    <label>Category Code 4</label>
    <type>TextArea</type>
</CustomField>