ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>EU_Company_Number__c</fullName>
    <label>Company Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>