ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>EU_Contract_Description__c</fullName>
    <label>Contract Description</label>
    <type>TextArea</type>
</CustomField>