ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Discount__c.field-meta.xml
<CustomField>
    <fullName>EU_Discount__c</fullName>
    <label>Discount</label>
    <length>35</length>
    <type>Text</type>
</CustomField>