ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Discount_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Discount_ID__c</fullName>
    <label>Discount ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>