ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Effective_Date__c</fullName>
    <description>Rollup of the earliest Effective Date of the Price Lines</description>
    <label>Effective Date</label>
    <summarizedField>EU_Price_Item__c.EU_Effective_Date__c</summarizedField>
    <summaryForeignKey>EU_Price_Item__c.EU_Pricing_Agreement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>