ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Expiry_Date__c</fullName>
    <description>Rollup of the latest Expiry Date of the Price Lines</description>
    <label>Expiry Date</label>
    <summarizedField>EU_Price_Item__c.EU_Expiry_Date__c</summarizedField>
    <summaryForeignKey>EU_Price_Item__c.EU_Pricing_Agreement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>