ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Price_Type__c</fullName>
    <label>Price Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>