ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Price_Agreement__c/fields/EU_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>EU_Total_Amount__c</fullName>
    <description>Rollup of Total Line of Price Item records</description>
    <label>Total Amount</label>
    <summarizedField>EU_Price_Item__c.EU_Total_Line__c</summarizedField>
    <summaryForeignKey>EU_Price_Item__c.EU_Pricing_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>